working-assets/css/global.css
/* ... */
.footer-container li a {
    display: inline-flex;
    min-height: 24px;
    min-width: 24px;
    place-content: center;
}

@media screen and (width > 768px) {
    .footer-container {
        display: flex;
        gap: 5vw;
        margin-bottom: 60px;
    }

    footer.section--footer {
        margin: 60px auto 0;

        & .footer-socials {
            width: 20vw;
        }

        & content-accordian {
            flex-grow: 1;
            display: flex;
            justify-content: stretch;
            gap: 15px;
            margin: 0 0 60px;

            & svg {
                display: none;
            }

            & .accordian-item {
                border: none !important;
                flex: 1 0 auto;
            }

            & .accordian-header {
                pointer-events: none;
                font-size: var(--txt-p);
                margin-bottom: 10px;
                color: var(--c-dark-grey);
            }

            & .accordian-content {
                height: fit-content;
                margin: 0;
                gap: 10px;
                font-size: var(--txt-p);
            }
        }
    }


}

/* PRODUCT CARDS */

/* .splide__slide {
    & .product_card-info {
        height: 0;
    }

    &.is-active .product_card-info {
        height: auto;
    }
} */

article:has(product-card) {
    scroll-margin-top: 105px;
}

product-card {
    display: flex;
    flex-flow: column nowrap;
    height: 100%;
    max-height: 100vh;
    width: 100%;
    max-width: 400px;
    margin: 0 auto;
    position: relative;

    &.first-item {
        order: -1;
    }


    & .product_card-media {
        aspect-ratio: 35 / 50;
        position: relative;
        overflow-y: hidden;

        &.oos-overlay::after {
            backdrop-filter: blur(-1px);
            background: linear-gradient(0deg, #1e1e1e, #1e1e1e80 40%, #fff0 66%);
            content: "";
            display: block;
            height: 100%;
            position: absolute;
            top: 0;
            transition: top .2s ease;
            width: 100%;
        }
    }

    & .product_card-images {
        display: flex;
        overflow: auto hidden;
        white-space: nowrap;
        scroll-snap-align: start;
        scroll-snap-type: x mandatory;
        scrollbar-width: thin;
        place-items: center;
        width: 100%;
        height: 100%;
        position: relative;
    }

    & .outofstockcontainer {
        position: absolute;
        bottom: 10%;
        left: 50%;
        z-index: 1;
        transform: translateX(-50%);
        padding: .65rem 1rem;
        min-width: 50%;
    }

    & .product_card-first-image {
        display: grid;
        flex: 0 0 100%;
        align-items: center;
        height: 100%;

        & .background-image {
            z-index: -1;
        }
    }

    & .product_card-decal {
        bottom: 1em;
        position: absolute;
        right: 2px;
        z-index: 1;
        height: auto;
        width: auto;
        max-width: 50%;
        object-fit: contain;
    }

    & img {
        height: 100%;
        width: 100%;
        display: block;
        scroll-snap-align: start;
        object-position: center;
    }

    &>a img:first-of-type {
        height: 100%;
        z-index: -2;
    }

    & :nth-child(-n + 3) {
        grid-area: 1 / 1;
    }

    & .product_card-info {
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        height: auto;
        height: fit-content;
        overflow-y: hidden;
        transition: height 0.1s var(--bezier);
        justify-content: space-between;
        margin-bottom: 0.5rem;
        padding-bottom: 0.25rem;
        border-bottom: 1px solid var(--c-light-grey);
    }

    & .countdown-wrapper {
        text-align: center;
        color: var(--c-white);
        background-color: var(--c-black);
        padding: 0.6em 0 0.4em;
        margin: 0.5em 0 0;
        line-height: 1;
        min-height: 27px;
    }

    & .datb {
        position: absolute;
        bottom: 0;
        width: 100%;
        height: 0;
        background: var(--c-white);
        transition: height 0.15s ease, opacity 0.14s ease-in;
        display: none;
        padding: 20px 10px;
        opacity: 0;
        text-align: center;
        z-index: 2;

        & p {
            padding-bottom: 10px;
        }
    }

    .iWishColl,
    .mqatb-show {
        position: absolute;
        top: 12px;
        right: 12px;
    }

    .iWishColl {
        background: color-mix(in lab, var(--c-white), transparent 70%);

        & span {
            display: none;
        }
    }

    .mqatb-show {
        top: 54px;
        background: var(--c-white);

        & svg {
            width: 18px;
            height: 18px;
            stroke: var(--c-dark-grey);
        }
    }

    & .Price--saving {
        --colour: var(--c-sale);
        position: absolute;
        top: 15px;
        background-color: var(--c-sale);
        color: white;
        font-weight: 700;
        font-size: var(--txt-sm);
    }

    & span.Price--saving.error {
        --colour: var(--c-black);
        background-color: var(--c-black);
    }
}

product-card,
.mqatb-modal {
    & .Title {
        justify-content: space-between;
        padding-top: 1em;
        padding-bottom: 0.25em;

        & .title {
            padding-right: 5px;
            font-size: var(--txt-p);
        }

        & .colour {
            text-align: right;
        }
    }
}

.qatb-btns {
    display: flex;
    justify-content: center;
    gap: 12px;
    flex-flow: row wrap;
    grid-column: 1 / -1;
    margin-top: 0.55em;
}

.qatb-btn,
.qatb-btn--oos {
    min-width: 24px;
    height: 18px;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    display: inline;
}

.qatb-btn--oos {
    color: var(--c-light-grey);
    border-color: transparent;
    pointer-events: none;
}

.cart-error {
    margin: 0 auto 5px;
}
/* ... */

